# SignalFlow-Chat-Server

./: .gitignore  Cargo.toml  README.md
apps/cli_chat/: Cargo.toml
apps/cli_chat/src/: main.rs
apps/sentinel_daemon/: Cargo.toml
apps/tauri_ui/: Cargo.toml
crates/core_crypto/: Cargo.toml
crates/network_tor/: Cargo.toml
crates/storage_vault/: Cargo.toml
docs/: 00_architecture_overview.md  01_threat_model.md  02_network_and_routing.md  03_cryptography.md  04_application_security.md  05_storage_and_memory.md  06_hardware_triggers.md
