[workspace]
members = [
    "crates/core_crypto",
    "crates/network_tor",
    "crates/storage_vault",
    "apps/sentinel_daemon",
    "apps/tauri_ui",
    "apps/cli_chat"
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
